state-perview-card/style.css
:root {
    --color-very-dark-blue: hsl(233, 47%, 7%);
    --color-dark-desaturated-blue: hsl(244, 38%, 16%);
    --color-soft-violet: hsl(277, 64%, 61%);

    --color-white: hsl(0, 0%, 100%);
    --color-slightly-transparent-white: hsla(0, 0%, 100%, 0.75);
    --color-slightly-transparent-white: hsla(0, 0%, 100%, 0.6);
}

html {
    box-sizing: border-box;
    font-size: 62.5%;
}

*, *::before, *::after {
    box-sizing: inherit;
}

body {
    font-size: 1.5rem;
    font-family: 'Lexend Deca', Arial, Helvetica, sans-serif;
    background-color: var(--color-very-dark-blue);
    color: white;
    padding: 1rem;
}

h1 {
    font-size: 3.5rem;
}

h2 {
    font-size: 3rem;
}

img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

/* Cards */
.card {
    background-color: var(--color-dark-desaturated-blue);
    border-radius: 10px;
    overflow: hidden;
}

.card__header {
    position: relative;
}

.card__header::after {
    content: '';
    background-color: var(--color-soft-violet);
    width: 100%;
    height: 100%;
    display: inline-block;
    position: absolute;
    top: 0;
    left: 0;
    opacity: 0.7;
}

.card__content {
    text-align: center;
    padding: 2rem;
}

.card__colored {
    color: var(--color-soft-violet);
}

.card__desc {
    line-height: 1.5;
    color: var(--color-slightly-transparent-white);
    margin: 0 0 6rem;
}

.card__item {
    margin: 4rem 0 1rem;
}

.card__item  h2 {
    font-weight: 400;
}

.card__item  p {
    margin: 0;
    color: var(--color-slightly-transparent-white);
    text-transform: uppercase;
    letter-spacing: 2px;
}

@media screen and (min-width: 768px) {
    .grid--1x2 {
        display: grid;
        grid-template-columns: 1fr 1fr;
    }

    .card {
        max-width: 1140px;
        max-height: 500px;
        margin: 0 auto;
    }

    .card__content {
        text-align: left;
        padding: 5rem;
    }

    .card__header {
        order: 2;
    }
}

